[gd_scene load_steps=7 format=3 uid="uid://drwpcmj2rotra"]

[ext_resource type="Script" path="res://ui/components/button_base_3d.gd" id="1_f84mu"]

[sub_resource type="Animation" id="Animation_7r5wr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonBase/ButtonTexture:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(232, 0, 232, 232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonBase/IconTextureRect:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0781245]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonBase/IconTextureRect:anchor_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.765625]
}

[sub_resource type="Animation" id="Animation_cfe04"]
resource_name = "button_down"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonBase/ButtonTexture:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(232, 0, 232, 232), Rect2(464, 0, 232, 232), Rect2(696, 0, 232, 232), Rect2(928, 0, 232, 232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonBase/IconTextureRect:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0781245, 0.15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonBase/IconTextureRect:anchor_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.765625, 0.837501]
}

[sub_resource type="Animation" id="Animation_qod1d"]
resource_name = "button_hover"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonBase/ButtonTexture:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(232, 0, 232, 232), Rect2(1160, 0, 232, 232)]
}

[sub_resource type="Animation" id="Animation_nu35i"]
resource_name = "button_up"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonBase/ButtonTexture:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(928, 0, 232, 232), Rect2(696, 0, 232, 232), Rect2(464, 0, 232, 232), Rect2(232, 0, 232, 232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonBase/IconTextureRect:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.15, 0.0781245]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonBase/IconTextureRect:anchor_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.838, 0.765625]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_676r3"]
_data = {
"RESET": SubResource("Animation_7r5wr"),
"button_down": SubResource("Animation_cfe04"),
"button_hover": SubResource("Animation_qod1d"),
"button_up": SubResource("Animation_nu35i")
}

[node name="ButtonBase3D" type="AspectRatioContainer"]
editor_description = "Template for a 3d Button. Button Base can be a shared res. Button Texture needs to be made local to scene. Click mask requires both a click mask and normal texture. Click mask alpha should be set to 0 to stop it from affecting anything."
anchors_preset = -1
anchor_right = 0.0208333
anchor_bottom = 0.037037
script = ExtResource("1_f84mu")
metadata/_edit_use_anchors_ = true

[node name="ButtonBase" type="TextureRect" parent="."]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ButtonTexture" type="TextureRect" parent="ButtonBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ClickMask" type="TextureButton" parent="ButtonBase"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 5

[node name="IconTextureRect" type="TextureRect" parent="ButtonBase"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0781245
anchor_right = 1.0
anchor_bottom = 0.765625
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_676r3")
}

[connection signal="mouse_entered" from="ButtonBase/ClickMask" to="." method="_on_click_mask_mouse_entered"]
[connection signal="mouse_exited" from="ButtonBase/ClickMask" to="." method="_on_click_mask_mouse_exited"]
[connection signal="pressed" from="ButtonBase/ClickMask" to="." method="_on_click_mask_pressed"]
